--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head><title> weather</title>
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
 <div class="location">
